[Plugins/webrtc] Avoid P2P chat nick wrapping

--- a/src/webrtc/static/webrtc.css
+++ b/src/webrtc/static/webrtc.css
@@ -22,3 +22,6 @@
   display: -webkit-flex;
   display: flex;
 }
+.p2p-chat-popup .input-nick-cell .nick {
+  white-space: nowrap;
+}
